refactor: code  cleanup